--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
+  <!--
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  -->
   <link rel="stylesheet" href="assets/css/av1-rtp-spec.css">
   <link rel="stylesheet" href="assets/css/syntax-tango.css">
   <link rel="apple-touch-icon" sizes="57x57" href="assets/images/icons/apple-icon-57x57.png">
@@ -23,19 +25,53 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="assets/images/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+ 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="assets/js/anchor.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script> -->
+  <!-- <script src="assets/js/anchor.min.js"></script> -->
   <!-- Helper script for the table of contents -->
-  <script src="assets/js/toc.js"></script>
-</head>
+  <!-- <script src="assets/js/toc.js"></script> -->
 
+  <script 
+    src='https://www.w3.org/Tools/respec/respec-w3c' 
+    class='remove' async>
+  </script>
+  <script class='remove'>
+    var respecConfig = {
+      specStatus: "FPWD",
+      editors: [{
+        name: "Your Name",
+        url: "https://your-site.com",
+      }],
+      gitHub: "some-org/mySpec",
+      shortName: "dahut",
+      xref: "web-platform",
+      testSuiteURI: "http://ludo17.free.fr/av1/",
+      noTOC: true,
+    };
+  </script>
+</head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-{{ content }}
+  <section id='abstract'>
+    <p>
+      This is required.
+    </p>
+  </section>
+  <section id='sotd'>
+    <p>
+      This is required.
+    </p>
+  </section>
+  <section id='conformance'>
+    <p>
+      This is required for specifications that contain normative material.
+    </p>
+  </section>
+  {{ content }}
       </div>
     </div>
   </div>
