--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -47,7 +47,7 @@
       gitHub: "some-org/mySpec",
       shortName: "dahut",
       xref: "web-platform",
-      testSuiteURI: "https://test-site.com/",
+      testSuiteURI: "https://cosmosoftware.github.io/av1-rtp-spec/",
       noTOC: true,
     };
   </script>
