--- a/_layouts/web.html
+++ b/_layouts/web.html
@@ -27,14 +27,7 @@
   <meta name="msapplication-TileImage" content="assets/images/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
  
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script> -->
-  <!-- <script src="assets/js/anchor.min.js"></script> -->
-  <!-- Helper script for the table of contents -->
-  <!-- <script src="assets/js/toc.js"></script> -->
-
-  <script class="remove" src="respec-w3c-common.js" type="text/javascript">
+  <script src="respec-w3c.js" class="remove">
     // // keep this comment //
   </script>
   <script class="remove" src="webrtc.js" type="text/javascript">
@@ -45,22 +38,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-  <section id='abstract'>
-    <p>
-      This is required.
-    </p>
-  </section>
-  <section id='sotd'>
-    <p>
-      This is required.
-    </p>
-  </section>
-  <section id='conformance'>
-    <p>
-      This is required for specifications that contain normative material.
-    </p>
-  </section>
-  {{ content }}
+      {{ content }}
       </div>
     </div>
   </div>
